# PackFlow-Workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: github-releases-updater.md
public/: splash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: build.rs  clipboard.rs  deployment.rs  environment.rs  filesystem.rs  git.rs  history.rs  mod.rs  project.rs  release.rs  server_ops.rs  service_ops.rs  task_pipeline.rs  template.rs  updater.rs
src-tauri/src/models/: build.rs  command_template.rs  dependency.rs  deployment.rs  environment.rs  history.rs  mod.rs  module.rs  project.rs  release.rs  server_ops.rs  service_ops.rs  task_pipeline.rs  template.rs
src-tauri/src/repositories/: command_template_repo.rs  deployment_repo.rs  history_repo.rs  mod.rs  pipeline_repo.rs  release_repo.rs  server_ops_repo.rs  service_ops_repo.rs  settings_repo.rs  storage.rs  template_repo.rs
src-tauri/src/services/: command_builder.rs  command_runner.rs  dependency_graph_service.rs  deployment_common.rs  deployment_executor.rs  env_detector.rs  health_check_service.rs  jdk_scanner.rs  mod.rs  pom_parser.rs  process_runner.rs  process_utils.rs  remote_log_session_service.rs  secure_storage.rs  service_operation_executor.rs  ssh_transport_service.rs  startup_probe_service.rs  task_helpers.rs  task_pipeline_executor.rs  terminal_session_service.rs  token_expansion.rs
(+95 files in other folders)
